MOPP-176 - modify import UX and resolve UI bugs.

--- a/MoppApp/MoppApp/Containers.storyboard
+++ b/MoppApp/MoppApp/Containers.storyboard
@@ -16,7 +16,7 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="JWH-xe-tuk" kind="relationship" relationship="rootViewController" id="civ-vS-LaH"/>
+                        <segue destination="sf2-5x-d8J" kind="relationship" relationship="rootViewController" id="KtF-UF-YQU"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ldH-7F-IBp" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -24,39 +24,37 @@
             <point key="canvasLocation" x="-793" y="57"/>
         </scene>
         <!--Containers List View Controller-->
-        <scene sceneID="4Vr-LT-o4D">
+        <scene sceneID="kb2-gY-jxG">
             <objects>
-                <viewController id="JWH-xe-tuk" customClass="ContainersListViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="qfC-6W-ShS"/>
-                        <viewControllerLayoutGuide type="bottom" id="kef-h9-69p"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="CZZ-hf-HPN">
+                <tableViewController id="sf2-5x-d8J" customClass="ContainersListViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" id="acu-5C-rHN">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="Zle-3j-B3W">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="Zle-3j-B3W" firstAttribute="top" secondItem="qfC-6W-ShS" secondAttribute="bottom" id="4kb-18-UFK"/>
-                            <constraint firstItem="Zle-3j-B3W" firstAttribute="leading" secondItem="CZZ-hf-HPN" secondAttribute="leading" id="CEt-1j-sXi"/>
-                            <constraint firstAttribute="trailing" secondItem="Zle-3j-B3W" secondAttribute="trailing" id="G1e-0p-QXS"/>
-                            <constraint firstItem="kef-h9-69p" firstAttribute="top" secondItem="Zle-3j-B3W" secondAttribute="bottom" id="JU0-xj-PbL"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="SDb-C1-CQb"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="Mer-2X-pZY">
+                                <rect key="frame" x="0.0" y="92" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Mer-2X-pZY" id="m99-5N-URa">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="sf2-5x-d8J" id="Nxm-X2-QWn"/>
+                            <outlet property="delegate" destination="sf2-5x-d8J" id="sEe-f1-xeq"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="k6p-t4-nPU"/>
                     <connections>
-                        <outlet property="tableView" destination="Zle-3j-B3W" id="DBa-Ez-aHV"/>
-                        <segue destination="WeI-GO-Leo" kind="show" identifier="ContainerDetailsSegue" id="g8j-YR-rNL"/>
-                        <segue destination="406-JD-At3" kind="show" identifier="FileImportSegue" id="21m-Lb-EBh"/>
+                        <segue destination="WeI-GO-Leo" kind="show" identifier="ContainerDetailsSegue" id="erQ-HB-DSJ"/>
+                        <segue destination="406-JD-At3" kind="show" identifier="FileImportSegue" id="w6v-pG-21O"/>
                     </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="aG7-nm-9y2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="kd5-oH-icf" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="145" y="56"/>
+            <point key="canvasLocation" x="132" y="56"/>
         </scene>
         <!--Container Details View Controller-->
         <scene sceneID="31Q-Wj-CR5">
@@ -71,7 +69,7 @@
                                 <rect key="frame" x="0.0" y="120" width="375" height="77"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="OKs-lk-JJa" id="H0g-f1-Tia">
-                                    <frame key="frameInset" width="375" height="76"/>
+                                    <frame key="frameInset" width="375" height="77"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="digidoc" translatesAutoresizingMaskIntoConstraints="NO" id="Uui-e5-DkA">
@@ -113,7 +111,7 @@
                                 <rect key="frame" x="0.0" y="197" width="375" height="75"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="Hv2-aC-AVj" id="meR-F9-9hr">
-                                    <frame key="frameInset" width="375" height="74"/>
+                                    <frame key="frameInset" width="375" height="75"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="attachment" translatesAutoresizingMaskIntoConstraints="NO" id="k1i-tf-Axp">
@@ -155,7 +153,7 @@
                                 <rect key="frame" x="0.0" y="272" width="375" height="99"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="kJP-XE-8EL" id="8g9-lJ-Vw4">
-                                    <frame key="frameInset" width="375" height="98"/>
+                                    <frame key="frameInset" width="375" height="99"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="account" translatesAutoresizingMaskIntoConstraints="NO" id="OXB-27-kwG">
@@ -206,7 +204,7 @@
                                 <rect key="frame" x="0.0" y="371" width="375" height="133"/>
                                 <autoresizingMask key="autoresizingMask"/>
                                 <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="vxl-na-nwh" id="jhi-ZQ-yZp">
-                                    <frame key="frameInset" width="375" height="132"/>
+                                    <frame key="frameInset" width="375" height="133"/>
                                     <autoresizingMask key="autoresizingMask"/>
                                     <subviews>
                                         <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Mv1-Iu-PU7">
@@ -232,7 +230,7 @@
                 </tableViewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="gIh-c9-d71" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1054" y="55"/>
+            <point key="canvasLocation" x="1054" y="56"/>
         </scene>
         <!--Signed-->
         <scene sceneID="9BK-hI-UkM">
@@ -244,54 +242,41 @@
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <connections>
-                        <segue destination="p0g-wd-iTz" kind="relationship" relationship="rootViewController" id="STU-1t-1ag"/>
+                        <segue destination="qIq-Vu-YIB" kind="relationship" relationship="rootViewController" id="Aro-bI-ghN"/>
                     </connections>
                 </navigationController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="ZAK-fk-ny2" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="145" y="957"/>
+            <point key="canvasLocation" x="132" y="807"/>
         </scene>
         <!--File Import View Controller-->
-        <scene sceneID="Z7M-tA-cgW">
+        <scene sceneID="FHV-d0-gvk">
             <objects>
-                <viewController id="p0g-wd-iTz" customClass="FileImportViewController" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="K6g-vU-NLk"/>
-                        <viewControllerLayoutGuide type="bottom" id="Kdw-XT-TgP"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="BQk-ZZ-Yhg">
+                <tableViewController id="qIq-Vu-YIB" customClass="FileImportViewController" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="grouped" separatorStyle="default" rowHeight="44" sectionHeaderHeight="18" sectionFooterHeight="18" id="4d8-Dz-8Th">
                         <rect key="frame" x="0.0" y="0.0" width="375" height="667"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <subviews>
-                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="infoLabel" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="avC-HT-R21">
-                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                <nil key="textColor"/>
-                                <nil key="highlightedColor"/>
-                            </label>
-                            <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="44" sectionHeaderHeight="28" sectionFooterHeight="28" translatesAutoresizingMaskIntoConstraints="NO" id="7Hw-xk-ukN">
-                                <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                            </tableView>
-                        </subviews>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
-                        <constraints>
-                            <constraint firstItem="7Hw-xk-ukN" firstAttribute="top" secondItem="avC-HT-R21" secondAttribute="bottom" constant="10" id="0F3-1x-Cox"/>
-                            <constraint firstItem="avC-HT-R21" firstAttribute="top" secondItem="K6g-vU-NLk" secondAttribute="bottom" constant="10" id="0pG-Jc-IAM"/>
-                            <constraint firstItem="avC-HT-R21" firstAttribute="leading" secondItem="BQk-ZZ-Yhg" secondAttribute="leading" constant="10" id="Rtu-tu-lia"/>
-                            <constraint firstItem="Kdw-XT-TgP" firstAttribute="top" secondItem="7Hw-xk-ukN" secondAttribute="bottom" id="kOy-aW-ySh"/>
-                            <constraint firstAttribute="trailing" secondItem="avC-HT-R21" secondAttribute="trailing" constant="10" id="lsn-ib-DMt"/>
-                            <constraint firstItem="7Hw-xk-ukN" firstAttribute="leading" secondItem="BQk-ZZ-Yhg" secondAttribute="leading" id="tW8-iX-12K"/>
-                            <constraint firstAttribute="trailing" secondItem="7Hw-xk-ukN" secondAttribute="trailing" id="zFn-zj-eRs"/>
-                        </constraints>
-                    </view>
-                    <navigationItem key="navigationItem" id="ume-3A-sDN"/>
-                    <connections>
-                        <outlet property="infoLabel" destination="avC-HT-R21" id="3Bp-yA-0BE"/>
-                        <outlet property="tableView" destination="7Hw-xk-ukN" id="UqB-L0-LqP"/>
-                    </connections>
-                </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="ONZ-a2-Sls" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                        <color key="backgroundColor" cocoaTouchSystemColor="groupTableViewBackgroundColor"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" id="zjX-9j-euO">
+                                <rect key="frame" x="0.0" y="120" width="375" height="44"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="zjX-9j-euO" id="mFT-81-Ifk">
+                                    <frame key="frameInset" width="375" height="43"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                </tableViewCellContentView>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="qIq-Vu-YIB" id="L4e-Te-M6U"/>
+                            <outlet property="delegate" destination="qIq-Vu-YIB" id="2t6-2k-UPa"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" id="cNT-J1-bSx"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="WhW-1I-bXT" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1054" y="957"/>
+            <point key="canvasLocation" x="951" y="806"/>
         </scene>
     </scenes>
     <resources>
